execute_process(COMMAND pebble sdk include-path aplite OUTPUT_VARIABLE PEBBLE_INCLUDE_DIR)
INCLUDE_DIRECTORIES("${PEBBLE_INCLUDE_DIR}")

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)

ADD_TEST(
  NAME pebble-core-test 
  COMMAND pebble-core-test
  WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test"
)
