SET(PEBBLE_FLAVOUR basalt)
EXECUTE_PROCESS(COMMAND pebble sdk include-path ${PEBBLE_FLAVOUR} OUTPUT_VARIABLE PEBBLE_INCLUDE_DIR)
IF(NOT "${PEBBLE_INCLUDE_DIR}")
    SET(PEBBLE_INCLUDE_DIR, "/Users/janmachacek/Library/Application Support/Pebble SDK/SDKs/3.10.1/sdk-core/pebble/${PEBBLE_FLAVOUR}/include")
ENDIF()
MESSAGE("${PEBBLE_INCLUDE_DIR}")
INCLUDE_DIRECTORIES("${PEBBLE_INCLUDE_DIR}")

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(test)

ADD_TEST(
  NAME pebble-core-test 
  COMMAND pebble-core-test
  WORKING_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/test"
)
